--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,13 +8,13 @@
         <meta property="og:url" content="https://eejitstools.com" />
         <meta property="og:site_name" content="Eejit's Tools" />
         <meta property="og:title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
-        <title>Eejit's Tools<% if (title) { %> | <%= title %><% } %></title>
+        <title><% if (title) { %> <%= title %> | <% } %>Eejit's Tools</title>
         <meta property="og:description" content="Some useful tools for general purposes!" />
         <meta name="keywords" content="" />
         <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta property="og:image:alt" content="Eejit's Tools" />
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:title" content="Eejit's Tools<% if (title) { %> | <%= title %><% } %>" />
+        <meta name="twitter:title" content="<% if (title) { %> <%= title %> | <% } %>Eejit's Tools" />
         <meta name="twitter:description" content="Some useful tools for general purposes!" />
         <meta name="twitter:url" content="https://eejitstools.com" />
         <meta name="twitter:image" content="https://eejitstools.com/favicons/icon.png" />
@@ -29,13 +29,28 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="/styles/styles.css" />
+        <!-- prettier-ignore -->
+        <% if (additionalStyle) { %>
+        <link rel="stylesheet" href="<%= additionalStyle %>" />
+        <% } %>
 
         <!-- Scripts -->
         <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
+        <% if (additionalScript) { %>
+        <script src="<%= additionalScript %>" defer></script>
+        <% } %>
         <script src="/scripts/global.js" defer></script>
+        <% if (page) { %>
+        <script src="/scripts/<%= page %>.js" defer></script>
+        <% } %>
     </head>
     <body>
+        <noscript>
+            <div id="overlay">
+                <span class="noscript-message">This page needs JavaScript to function properly! Please enable it and reload!</span>
+            </div>
+        </noscript>
         <nav id="navbar">
             <a href="/">
                 <span class="logo">
@@ -48,7 +63,7 @@
                     <input class="search-text" type="text" placeholder="Search here..." /><i class="search-btn fas fa-search"></i><br />
                     <div class="search-results"></div>
                 </div>
-                <a href="/tools/time" class="timer"><span id="navtime"></span></a>
+                <a href="/tools/time" class="timer"><span id="time-display"></span></a>
                 <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
             </span>
         </nav>
