reworked and updated all scripts

--- a/views/pages/tools/ip-info.ejs
+++ b/views/pages/tools/ip-info.ejs
@@ -3,7 +3,7 @@
     <div class="tooltext">
         All information based soley on your IP information, <em>not</em> your actual location.
 
-        <br /><br /><span id="reloadprompt" class="error">If you see this message, please reload the page.<br /></span>
+        <br /><br /><span id="reload-prompt" class="error">If you see this message, please reload the page.<br /></span>
 
         <span class="tooltip-right" data-tooltip="Internet Protocol">IP</span> Address: <span id="ip-address"><span class="error">Loading...</span></span>
 
