--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Some useful tools for general purposes!" />
+        <meta name="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://eejitstools.com" />
         <meta property="og:site_name" content="Eejit's Tools" />
         <meta property="og:title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
         <title><% if (title) { %><%= title %> | <% } %>Eejit's Tools</title>
-        <meta property="og:description" content="Some useful tools for general purposes!" />
+        <meta property="og:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
         <meta name="keywords" content="" />
         <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta property="og:image:alt" content="Eejit's Tools" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:title" content="<% if (title) { %><%= title %> | <% } %>Eejit's Tools" />
-        <meta name="twitter:description" content="Some useful tools for general purposes!" />
+        <meta name="twitter:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
         <meta name="twitter:url" content="https://eejitstools.com" />
         <meta name="twitter:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta name="twitter:image:alt" content="Eejit's Tools" />
