--- a/views/pages/tools/currency-exchange.ejs
+++ b/views/pages/tools/currency-exchange.ejs
@@ -1,38 +1,38 @@
 <div class="toolbox">
     <h1>Currency Exchange Rates:</h1>
     <div class="tooltext">
-        <span style="color: dimgray; font-size: 15px"
-            >Last Updated: <span id="lastupdated"><span class="error">Loading...</span></span> <br />Next Update:
-            <span id="nextupdate"><span class="error">Loading...</span></span>
+        <span style="color: dimgray; font-size: 15px">
+            Last Updated: <span id="last-updated"><span class="error">Loading...</span></span> <br />Next Update:
+            <span id="next-update"><span class="error">Loading...</span></span>
         </span>
         <table>
             <tbody>
                 <tr>
                     <td>
                         <div class="tooltext" style="margin-top: 0">
-                            $1 <span class="tooltip-bottom" data-tooltip="United States Dollar">USD</span> = <span id="usdcad"><span class="error">...</span></span>
+                            $1 <span class="tooltip-bottom" data-tooltip="United States Dollar">USD</span> = <span id="usd-cad"><span class="error">...</span></span>
                             <span class="tooltip-bottom" data-tooltip="Canadian Dollar">CAD</span>
 
-                            <br />$1 USD = <span id="usdeur"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Euro">EUR</span>
+                            <br />$1 USD = <span id="usd-eur"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Euro">EUR</span>
 
-                            <br />$1 USD = <span id="usdgbp"><span class="error">...</span></span>
+                            <br />$1 USD = <span id="usd-gbp"><span class="error">...</span></span>
                             <span class="tooltip-bottom" data-tooltip="Great British Pound Sterling">GBP</span>
 
-                            <br />$1 USD = <span id="usdaud"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Australian Dollar">AUD</span>
+                            <br />$1 USD = <span id="usd-aud"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Australian Dollar">AUD</span>
 
-                            <br />$1 USD = <span id="usdcrc"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Costa Rican Colón">CRC</span>
+                            <br />$1 USD = <span id="usd-crc"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Costa Rican Colón">CRC</span>
 
-                            <br />$1 USD = <span id="usdjpy"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Japanese Yen">JPY</span>
+                            <br />$1 USD = <span id="usd-jpy"><span class="error">...</span></span> <span class="tooltip-bottom" data-tooltip="Japanese Yen">JPY</span>
                         </div>
                     </td>
                     <td style="padding-left: 30px">
                         <div class="tooltext" style="margin-top: 0">
-                            $1 CAD = <span id="cadusd"><span class="error">...</span></span> USD<br />
-                            €1 EUR = <span id="eurusd"><span class="error">...</span></span> USD<br />
-                            £1 GBP = <span id="gbpusd"><span class="error">...</span></span> USD<br />
-                            $1 AUD = <span id="audusd"><span class="error">...</span></span> USD<br />
-                            ₡1 CRC = <span id="crcusd"><span class="error">...</span></span> USD<br />
-                            ¥1 JPY = <span id="jpyusd"><span class="error">...</span></span> USD
+                            $1 CAD = <span id="cad-usd"><span class="error">...</span></span> USD<br />
+                            €1 EUR = <span id="eur-usd"><span class="error">...</span></span> USD<br />
+                            £1 GBP = <span id="gbp-usd"><span class="error">...</span></span> USD<br />
+                            $1 AUD = <span id="aud-usd"><span class="error">...</span></span> USD<br />
+                            ₡1 CRC = <span id="crc-usd"><span class="error">...</span></span> USD<br />
+                            ¥1 JPY = <span id="jpy-usd"><span class="error">...</span></span> USD
                         </div>
                     </td>
                 </tr>
