--- a/views/pages/tools/time.ejs
+++ b/views/pages/tools/time.ejs
@@ -5,11 +5,11 @@
         Date: <span id="date"></span><br />
         <span class="tooltip-bottom" data-tooltip="Milliseconds since January 1st, 1970 in Coordinated Universal Time (UTC)">UNIX Epoch</span> Time: <span id="unix"></span><br />
         Timezone: <span id="timezone"></span><br /><br />
-        Time in Japan (<span class="tooltip-bottom" data-tooltip="Japan Standard Time">JST</span>): <span id="jptime"></span><br />
-        Time in Costa Rica (<span class="tooltip-bottom" data-tooltip="Central Standard Time">CST</span>): <span id="crtime"></span><br />
+        Time in Japan (<span class="tooltip-bottom" data-tooltip="Japan Standard Time">JST</span>): <span id="jp-time"></span><br />
+        Time in Costa Rica (<span class="tooltip-bottom" data-tooltip="Central Standard Time">CST</span>): <span id="cr-time"></span><br />
         Time in England/Ireland (<span class="mobilehidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
         ><span class="mobileonly"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
-        >): <span id="gbtime"></span><br />
-        <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span>/<span class="tooltip-bottom" data-tooltip="Greenwich Mean Time">GMT</span> Time: <span id="utctime"></span><br />
+        >): <span id="gb-time"></span><br />
+        <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span>/<span class="tooltip-bottom" data-tooltip="Greenwich Mean Time">GMT</span> Time: <span id="utc-time"></span><br />
     </div>
 </div>
