--- a/views/pages/tools/base64.ejs
+++ b/views/pages/tools/base64.ejs
@@ -3,7 +3,7 @@
     <div class="tooltext">
         Input:<br />
         <textarea id="input" style="width: 50%"></textarea>
-        <br /><button id="encode">Encode <i id="e-runResult"></i></button><button id="decode">Decode <i id="d-runResult"></i></button>
+        <br /><button id="encode">Encode <i id="encode-runResult"></i></button><button id="decode">Decode <i id="decode-runResult"></i></button>
         <button id="clear">Clear</button>
     </div>
     <hr style="margin-top: 30px" />
