--- a/views/pages/tools/binary-text.ejs
+++ b/views/pages/tools/binary-text.ejs
@@ -3,7 +3,7 @@
     <div class="tooltext">
         Input:<br />
         <textarea id="input" style="width: 50%"></textarea>
-        <br /><button id="to-binary">To Binary <i id="e-runResult"></i></button><button id="from-binary">From Binary <i id="d-runResult"></i></button>
+        <br /><button id="to-binary">To Binary <i id="encode-runResult"></i></button><button id="from-binary">From Binary <i id="decode-runResult"></i></button>
         <button id="clear">Clear</button>
     </div>
     <hr style="margin-top: 30px" />
