--- a/views/pages/tools/case-changer.ejs
+++ b/views/pages/tools/case-changer.ejs
@@ -3,7 +3,7 @@
     <div class="tooltext">
         Input:<br />
         <textarea id="input" style="width: 50%"></textarea>
-        <br /><button id="to-upper">To uppercase <i id="u-runResult"></i></button><button id="to-lower">To lowercase <i id="l-runResult"></i></button><button id="to-title">To title case <i id="t-runResult"></i></button><button id="to-sentence">To sentence case <i id="s-runResult"></i></button>
+        <br /><button id="to-upper">To uppercase <i id="uppercase-runResult"></i></button><button id="to-lower">To lowercase <i id="lowercase-runResult"></i></button><button id="to-title">To title case <i id="title-runResult"></i></button><button id="to-sentence">To sentence case <i id="sentence-runResult"></i></button>
         <button id="clear">Clear</button>
     </div>
     <hr style="margin-top: 30px" />
