--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -173,15 +173,10 @@ nav {
     width: 0px !important;
 }
 
-.search-box .search-text::placeholder {
-    color: #c5c5cc;
-}
-
-.search-box .search-text:-ms-input-placeholder {
-    color: #c5c5cc;
-}
-
-.search-box .search-text::-ms-input-placeholder {
+.search-box .search-text::placeholder,
+.search-box .search-text:-ms-input-placeholder,
+.search-box .search-text::-webkit-input-placeholder,
+.search-box .search-text::-moz-placeholder {
     color: #c5c5cc;
 }
 
@@ -808,14 +803,14 @@ a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
 }
 
 .color-display {
-    width: 30px;
-    height: 30px;
-    border: 4px solid #16181c;
-    margin: 8px 0 0 30px;
-    display: inline-grid;
-    position: absolute;
-    justify-content: center;
     align-content: center;
+    border: 4px solid #16181c;
+    display: inline-grid;
+    height: 30px;
+    justify-content: center;
+    margin: 8px 0 0 30px;
+    position: absolute;
+    width: 30px;
 }
 
 @media only screen and (max-width: 600px) {
