--- a/views/pages/tools/base64-image.ejs
+++ b/views/pages/tools/base64-image.ejs
@@ -8,7 +8,7 @@
                         <div class="tooltext">
                             Image:<br /><br />
                             <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-                            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br /><button id="encode">Encode <i id="e-runResult"></i></button>
+                            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br /><button id="encode">Encode <i id="encode-runResult"></i></button>
                             <button id="clear">Clear</button>
                         </div>
                     </td>
@@ -16,7 +16,7 @@
                         <div class="tooltext">
                             Base64 Encoded Image:<br />
                             <textarea id="string-input" style="width: 80%"></textarea>
-                            <br /><button id="decode">Decode <i id="d-runResult"></i></button>
+                            <br /><button id="decode">Decode <i id="decode-runResult"></i></button>
                             <button id="clear2">Clear</button>
                         </div>
                     </td>
@@ -31,7 +31,7 @@
                         <div class="tooltext">
                             Base64 Encoded Image:<br />
                             <textarea id="b64-result" style="width: 80%" readonly></textarea>
-                            <br /><button id="b64-copy-result" disabled>Copy</button> <button id="b64-open-result" disabled>Open in new tab</button>
+                            <br /><button id="b64-copy-result" disabled>Copy</button> <a id="b64-open-result-link" target="_blank"><button id="b64-open-result" disabled>Open in new tab</button></a>
                         </div>
                     </td>
                     <td valign="top">
