--- a/views/pages/tools/morse-code-converter.ejs
+++ b/views/pages/tools/morse-code-converter.ejs
@@ -2,9 +2,9 @@
     <h1>Morse Code Converter:</h1>
     <div class="tooltext">
         <!-- prettier-ignore -->
-        <span style="font-weight: 500; color: dimgray; font-size: 16px">Morse Code can be represented in writing using dashes and dots (hyphens/underscores and periods, <code>-</code>/<code>_</code> and <code>.</code>). Characters are separated by spaces, and actual spaces are represented by a backslash (<code>/</code>), a vertical slash (<code>|</code>), or three spaces (<code>   </code>). For example, <code>test abc</code> converts to <code>- . ... - / .- -... -.-.</code>. Morse code does <em>not</em> keep character case. This has been expanded to include conversions not officially recognized by <span class="tooltip-bottom" data-tooltip="International Telecommunication Union Radiocommunication Sector">ITU-R</span> M.1172 or ITU-R M.1677-1 (<code>;</code>, <code>_</code>, and <code>$</code>).</span><br /><br />
+        <span style="font-weight: 500; color: dimgray; font-size: 16px">Morse Code can be represented in writing using dashes and dots (hyphens/underscores and periods, <code>-</code>/<code>_</code> and <code>.</code>). Characters are separated by spaces, and actual spaces are represented by a backslash (<code>/</code>), a vertical slash (<code>|</code>), or three spaces (<code>   </code>). For example, <code>TEST ABC</code> converts to <code>- . ... - / .- -... -.-.</code>. Morse code does <em>not</em> keep character case. This has been expanded to include conversions not officially recognized by <span class="tooltip-bottom" data-tooltip="International Telecommunication Union Radiocommunication Sector">ITU-R</span> M.1172 or ITU-R M.1677-1 (<code>;</code>, <code>_</code>, and <code>$</code>).</span><br /><br />
         Input:<br />
-        <textarea id="input" style="width: 50%"></textarea>
+        <textarea id="input" style="width: 50%; text-transform: uppercase"></textarea>
         <br /><button id="to-morse">Encode to Morse Code <i id="encode-runResult"></i></button><button id="from-morse">Decode from Morse Code <i id="decode-runResult"></i></button>
         <button id="clear">Clear</button>
     </div>
