--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,36 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <!-- Common Tags -->
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://eejitstools.com" />
-        <meta property="og:site_name" content="Eejit's Tools" />
-        <meta property="og:title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="robots" content="index, follow" />
         <title><% if (title) { %><%= title %> | <% } %>Eejit's Tools</title>
-        <meta property="og:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
-        <meta name="keywords" content="" />
-        <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
-        <meta property="og:image:alt" content="Eejit's Tools" />
+        <!-- Search Engine -->
+        <meta name="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta name="keywords" content="eejitstools" />
+        <meta property="image" content="https://eejitstools.com/favicons/icon.png" />
+        <!-- Schema.org for Google -->
+        <meta itemprop="name" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
+        <meta itemprop="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta itemprop="image" content="https://eejitstools.com/favicons/icon.png" />
+        <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:title" content="<% if (title) { %><%= title %> | <% } %>Eejit's Tools" />
         <meta name="twitter:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
         <meta name="twitter:url" content="https://eejitstools.com" />
         <meta name="twitter:image" content="https://eejitstools.com/favicons/icon.png" />
-        <meta name="twitter:image:alt" content="Eejit's Tools" />
+        <meta name="twitter:image:alt" content="Eejit's Tools Wrench" />
+        <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+        <meta property="og:title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
+        <meta property="og:description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
+        <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
+        <meta property="og:image:alt" content="Eejit's Tools Wrench" />
+        <meta property="og:url" content="https://eejitstools.com" />
+        <meta property="og:site_name" content="Eejit's Tools" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:type" content="website" />
+        <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
         <link rel="manifest" href="/favicons/site.webmanifest" />
         <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#3e498a" />
+        <link rel="shortcut icon" href="/favicon.ico" />
+        <meta name="apple-mobile-web-app-title" content="Eejit's Tools" />
+        <meta name="application-name" content="Eejit's Tools" />
         <meta name="msapplication-TileColor" content="#3e498a" />
+        <meta name="msapplication-config" content="/favicons/browserconfig.xml" />
         <meta name="theme-color" content="#3e498a" />
 
+        <!-- Styles -->
         <link rel="stylesheet" href="/styles/styles.css" />
         <% for (let i = 0; i < additionalStyles.length; i++) { %>
         <link rel="stylesheet" href="<%= additionalStyles[i] %>" />
         <% } %>
+
+        <!-- Scripts -->
         <script src="/scripts/global.js" type="module"></script>
         <% if (script && page) { %>
         <script src="/scripts/pages/<%= page %>.js" type="module"></script>
