--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -32,12 +32,11 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
         <!-- Favicons -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
         <link rel="manifest" href="/favicons/site.webmanifest" />
         <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#3e498a" />
-        <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="apple-mobile-web-app-title" content="Eejit's Tools" />
         <meta name="application-name" content="Eejit's Tools" />
         <meta name="msapplication-TileColor" content="#3e498a" />
