testing if this resolves title issue

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,6 +8,7 @@
         <meta name="robots" content="index, follow" />
         <title><% if (title) { %><%= title %> | <% } %>Eejit's Tools</title>
         <!-- Search Engine -->
+        <meta name="title" content="<% if (title) { %><%= title %><% } else { %>Eejit's Tools<% } %>" />
         <meta name="description" content="<% if (description) { %><%= description %><% } else { %>Some useful tools for general purposes!<% } %>" />
         <meta name="keywords" content="eejitstools" />
         <meta property="image" content="https://eejitstools.com/favicons/icon.png" />
