--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -61,7 +61,7 @@
     <body>
         <noscript>
             <div id="overlay">
-                <span class="noscript-message">This page needs JavaScript to function properly! Please enable it and reload!</span>
+                <span class="noscript-message">This page requires JavaScript to function properly! Please enable it and reload!</span>
             </div>
         </noscript>
         <nav id="navbar">
