--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -649,7 +649,7 @@ textarea {
     width: 40%;
 }
 
-input:not(input[type='file']):not(input[type='checkbox']),
+input:not(input[type='file']):not(input[type='checkbox']):not(input[type='color']),
 .fakeinput {
     background-color: #252525;
     border: 1px solid #444;
@@ -670,7 +670,7 @@ input::-webkit-scrollbar,
     display: none;
 }
 
-input:focus:not(input[type='file']):not(input[type='checkbox']),
+input:focus:not(input[type='file']):not(input[type='checkbox']):not(input[type='color']),
 textarea:focus:not(input[type='file']),
 .fakeinput:focus {
     box-shadow: 0 0 3px 2px lightslategray;
@@ -679,6 +679,17 @@ textarea:focus:not(input[type='file']),
 
 input[type='file'] {
     display: none;
+}
+
+input[type='color'] {
+    background-color: #252525;
+    border: 1px solid #444;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type='color']:hover {
+    background-color: #2a2a2a;
 }
 
 .fakeinput {
@@ -769,7 +780,9 @@ button:hover:not(.fakeinput) {
 }
 
 .invisibleinput[type='number']::-webkit-inner-spin-button,
-.invisibleinput[type='number']::-webkit-outer-spin-button {
+.invisibleinput[type='number']::-webkit-outer-spin-button,
+.no-arrow[type='number']::-webkit-inner-spin-button,
+.no-arrow[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0px;
 }
@@ -800,23 +813,6 @@ input[type='search']::-webkit-search-results-decoration {
 
 a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
     --fa-animation-duration: 10s;
-}
-
-.color-display {
-    align-content: center;
-    border: 4px solid #16181c;
-    display: inline-grid;
-    height: 30px;
-    justify-content: center;
-    margin: 8px 0 0 30px;
-    position: absolute;
-    width: 30px;
-}
-
-@media only screen and (max-width: 600px) {
-    .color-display {
-        margin: 2px 0 0 30px;
-    }
 }
 
 #random-number .odometer-ribbon-inner {
@@ -963,4 +959,36 @@ a[href='/tools/countdowns'] i.fa-regular.fa-hourglass {
 .color-name {
     background: none;
     padding: 0.1rem;
+}
+
+.color-grid {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+}
+
+.color-grid div {
+    margin-top: 20px;
+}
+
+#color-display {
+    background-image: repeating-linear-gradient(45deg, #aaa 25%, transparent 25%, transparent 75%, #aaa 75%, #aaa), repeating-linear-gradient(45deg, #aaa 25%, #fff 25%, #fff 75%, #aaa 75%, #aaa);
+    background-position: 0 0, 5px 5px;
+    background-size: 10px 10px;
+    border: 4px solid #16181c;
+    height: 100px;
+    margin-top: 15px;
+    position: absolute;
+    width: 100px;
+}
+
+#color-display::after {
+    background-color: currentColor;
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
