many various fixes

--- a/views/pages/tools/time.ejs
+++ b/views/pages/tools/time.ejs
@@ -10,6 +10,6 @@
         Time in England/Ireland (<span class="mobilehidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
         ><span class="mobileonly"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
         >): <span id="gb-time"></span><br />
-        <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span>/<span class="tooltip-bottom" data-tooltip="Greenwich Mean Time">GMT</span> Time: <span id="utc-time"></span><br />
+        <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span> Time: <span id="utc-time"></span><br />
     </div>
 </div>
