--- a/views/pages/info/queer-calendar.ejs
+++ b/views/pages/info/queer-calendar.ejs
@@ -15,15 +15,15 @@
 
         <a target="_blank" id="year-overview">View year overview</a> • <a target="_blank" id="year-overview-list">View year overview (list)</a>
 
-        <span class="color-box noscript-hidden">
-            <span class="color-box-sm red"></span>
-            <span class="color-box-sm orange"></span>
-            <span class="color-box-sm yellow"></span>
-            <span class="color-box-sm green"></span>
-            <span class="color-box-sm blue"></span>
-            <span class="color-box-sm purple"></span>
-        </span>
+        <div class="color-box">
+            <div class="red"></div>
+            <div class="orange"></div>
+            <div class="yellow"></div>
+            <div class="green"></div>
+            <div class="blue"></div>
+            <div class="purple"></div>
+        </div>
 
-        <span class="noscript-hidden" style="font-size: 16px; color: dimgray"><br />Uses <a href="https://en.pronouns.page/calendar" target="_blank">pronouns.page</a> API</span>
+        <span style="font-size: 16px; color: dimgray"><br />Uses the <a href="https://en.pronouns.page/api" target="_blank">pronouns.page API</a></span>
     </div>
 </div>
