--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <div class="message">
         Welcome to my site! Here are some handy tools I made whilst learning
         <span class="tooltip-bottom" data-tooltip="Hypertext Markup Language">HTML</span>, <span class="tooltip-bottom" data-tooltip="Cascading Style Sheets">CSS</span>, and JavaScript!
+        <span class="mobile-only"><br /><br /><a href="/search">Search the site!</a></span>
     </div>
 </header>
 <table class="toolstable">
