--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -72,7 +72,7 @@
                 </span>
             </a>
             <span style="float: right">
-                <div class="search-box mobilehidden">
+                <div class="search-box mobile-hidden">
                     <input class="search-text" type="text" placeholder="Search here..." /><i class="search-btn fas fa-search"></i><br />
                     <div class="search-results"></div>
                 </div>
