--- a/views/pages/tools/time.ejs
+++ b/views/pages/tools/time.ejs
@@ -7,8 +7,8 @@
         Timezone: <span id="timezone"></span><br /><br />
         Time in Japan (<span class="tooltip-bottom" data-tooltip="Japan Standard Time">JST</span>): <span id="jp-time"></span><br />
         Time in Costa Rica (<span class="tooltip-bottom" data-tooltip="Central Standard Time">CST</span>): <span id="cr-time"></span><br />
-        Time in England/Ireland (<span class="mobilehidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
-        ><span class="mobileonly"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
+        Time in England/Ireland (<span class="mobile-hidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
+        ><span class="mobile-only"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
         >): <span id="gb-time"></span><br />
         <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span> Time: <span id="utc-time"></span><br />
     </div>
