--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <span class="mobile-only"><br /><br /><a href="/search">Search the site!</a></span>
     </div>
 </header>
-<table class="toolstable">
+<table class="tools-table">
     <tbody>
         <% for (let i = 0; i < pages.length; i++) { if (/tools\//.test(pages[i].link)) { %>
         <tr>
@@ -23,7 +23,7 @@
     </tbody>
 </table>
 
-<table class="toolstable" style="margin-top: 70px">
+<table class="tools-table" style="margin-top: 70px">
     <tbody>
         <% for (let i = 0; i < pages.length; i++) { if (/info\//.test(pages[i].link)) { %>
         <tr>
@@ -36,7 +36,7 @@
     </tbody>
 </table>
 
-<table class="toolstable" style="margin-top: 70px">
+<table class="tools-table" style="margin-top: 70px">
     <tbody>
         <% for (let i = 0; i < pages.length; i++) { if (/fun\//.test(pages[i].link)) { %>
         <tr>
