--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -76,7 +76,7 @@
                     <input class="search-text" type="text" placeholder="Search here..." /><i class="search-btn fas fa-search"></i><br />
                     <div class="search-results"></div>
                 </div>
-                <a href="/tools/time" class="timer"><span id="time-display">Loading...</span></a>
+                <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span></a>
                 <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
             </span>
         </nav>
