--- a/views/pages/tools/unix-time-converter.ejs
+++ b/views/pages/tools/unix-time-converter.ejs
@@ -1,43 +1,27 @@
 <div class="toolbox">
     <h1>UNIX Time Converter:</h1>
     <div class="tooltext">
-        <table class="unixtable">
-            <tbody>
-                <tr>
-                    <td>
-                        <div class="tooltext">
-                            Standard Time:<br />
-                            <input id="standard-input" style="width: 40%" />
-                            <br /><button id="standard-input-reset">Set to current time</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="tooltext">
-                            <span id="unix-input-title">UNIX Time (seconds):</span><br />
-                            <input id="unix-input" style="width: 40%" />
-                            <br /><button id="unix-input-reset">Set to current time</button> <button id="unix-input-switch">Switch to milliseconds</button>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="fa-solid fa-arrow-down" style="color: #009c3f; font-size: 30px; margin-left: 19%" id="standard-arrow"></i>
-                        <div class="tooltext">
-                            <span id="unix-output-title">UNIX Time (seconds):</span><br />
-                            <input id="unix-output" style="width: 40%" readonly />
-                            <br /><button id="unix-output-copy" disabled>Copy</button> <button id="unix-output-switch" disabled>Switch to milliseconds</button>
-                        </div>
-                    </td>
-                    <td>
-                        <i class="fa-solid fa-arrow-down" style="color: #009c3f; font-size: 30px; margin-left: 19%" id="unix-arrow"></i>
-                        <div class="tooltext">
-                            Standard Time:<br />
-                            <input id="standard-output" style="width: 40%" readonly />
-                            <br /><button id="standard-output-copy" disabled>Copy</button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="basic-grid" style="--min-width: 450px">
+            <div class="tooltext">
+                Standard Time:<br />
+                <input id="standard-input" style="width: 225px; max-width: 50%" />
+                <br /><button id="standard-input-reset">Set to current time</button> <br /><i class="fa-solid fa-arrow-down" style="color: #009c3f; font-size: 30px; margin-left: 100px; margin-top: 20px" id="standard-arrow"></i>
+                <div class="tooltext">
+                    <span id="unix-output-title">UNIX Time (seconds):</span><br />
+                    <input id="unix-output" style="width: 150px; max-width: 50%" readonly />
+                    <br /><button id="unix-output-copy" disabled>Copy</button> <button id="unix-output-switch" disabled>Switch to milliseconds</button>
+                </div>
+            </div>
+            <div class="tooltext">
+                <span id="unix-input-title">UNIX Time (seconds):</span><br />
+                <input id="unix-input" style="width: 150px; max-width: 50%" />
+                <br /><button id="unix-input-reset">Set to current time</button> <button id="unix-input-switch">Switch to milliseconds</button> <br /><i class="fa-solid fa-arrow-down" style="color: #009c3f; font-size: 30px; margin-left: 100px; margin-top: 20px" id="unix-arrow"></i>
+                <div class="tooltext">
+                    Standard Time:<br />
+                    <input id="standard-output" style="width: 225px; max-width: 50%" readonly />
+                    <br /><button id="standard-output-copy" disabled>Copy</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
