--- a/views/pages/tools/base64-image.ejs
+++ b/views/pages/tools/base64-image.ejs
@@ -1,47 +1,31 @@
 <div class="toolbox">
     <h1>Base64 Image Encode/Decode:</h1>
     <div class="tooltext">
-        <table class="base64output">
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <div class="tooltext">
-                            Image:<br /><br />
-                            <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-                            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br /><button id="encode">Encode <i id="encode-runResult"></i></button>
-                            <button id="clear">Clear</button>
-                        </div>
-                    </td>
-                    <td valign="top">
-                        <div class="tooltext">
-                            Base64 Encoded Image:<br />
-                            <textarea id="string-input" style="width: 80%"></textarea>
-                            <br /><button id="decode">Decode <i id="decode-runResult"></i></button>
-                            <button id="clear2">Clear</button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="basic-grid" style="--min-width: 450px">
+            <div class="tooltext">
+                Image:<br /><br />
+                <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
+                <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br /><button id="encode">Encode <i id="encode-runResult"></i></button>
+                <button id="clear">Clear</button>
+            </div>
+            <div class="tooltext">
+                Base64 Encoded Image:<br />
+                <textarea id="string-input" style="width: 350px; max-width: 80%"></textarea>
+                <br /><button id="decode">Decode <i id="decode-runResult"></i></button>
+                <button id="clear2">Clear</button>
+            </div>
+        </div>
         <hr style="margin-top: 30px" />
-        <table class="base64output">
-            <tbody>
-                <tr>
-                    <td valign="top">
-                        <div class="tooltext">
-                            Base64 Encoded Image:<br />
-                            <textarea id="b64-result" style="width: 80%" readonly></textarea>
-                            <br /><button id="b64-copy-result" disabled>Copy</button> <a id="b64-open-result-link" target="_blank"><button id="b64-open-result" disabled>Open in new tab</button></a>
-                        </div>
-                    </td>
-                    <td valign="top">
-                        <div class="tooltext">
-                            Image:<br />
-                            <img id="image-output" style="max-width: 80%" src="" />
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="basic-grid" style="--min-width: 450px">
+            <div class="tooltext">
+                Base64 Encoded Image:<br />
+                <textarea id="b64-result" style="width: 350px; max-width: 80%" readonly></textarea>
+                <br /><button id="b64-copy-result" disabled>Copy</button> <a id="b64-open-result-link" target="_blank"><button id="b64-open-result" disabled>Open in new tab</button></a>
+            </div>
+            <div class="tooltext">
+                Image:<br />
+                <img id="image-output" style="max-width: 80%" src="" />
+            </div>
+        </div>
     </div>
 </div>
