changed show shortcuts icon from `\` to `⌘`

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -81,7 +81,7 @@
             </span>
         </nav>
         <%- body %>
-        <button id="show-shortcuts">/</button>
+        <button id="show-shortcuts">⌘</button>
         <div id="shortcuts" style="display: none">
             <div id="shortcuts-content">
                 <div id="shortcuts-header">
